--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <netbeans.hint.license>lgpl21</netbeans.hint.license>
     </properties>
     <dependencies>
         <dependency>
